# datasets

./: .dockerignore  .gitignore  .mdgen_cache.json  CHANGES.md  CLOUD_RUN.md  CURSES_INTERFACE_FIXES.md  Dockerfile  Dockerfile.nginx  LICENSE  LICENSE.md  PIPELINE_LIMITS_UPDATE.md  RATE_LIMITING.md  README.md  TROUBLESHOOTING.md  VERSION  agent_standalone.py  apply_curses_fix.py  cloudbuild.yaml  cloudrun-start.sh  dataset_agent.py  datasets.py  docker-compose.yml  entrypoint.sh  env.example  fixed_agent.py  hmrc_quick_scraper.py  hmrc_scraper.py  langgraph.json  langgraph_docs.json  langgraph_docs_fetch.py  langgraph_integration_summary.md  license.py  llm_utils.py  main.py  mdgen.py  nginx.conf  push.py  pyproject.toml  pytest.ini  requirements.txt  (+11 more)
datasets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hmrc_documentation_quick/: progress.json  summary.json
hmrc_documentation_quick/text/: aggregates-levy-enquiries.txt  (+2 more)
pipelines/: advanced_qa_generator.py  bailii_scraper.py  complete_pipeline.py  copyright_pipeline.py  dynamic_pipeline.py  enhanced_legal_pipeline.py  hmrc_scraper.py  housing_QA_generator.py  housing_bailii_scraper.py  housing_pipeline.py  legal_reasoning_enhancer.py  tax_scenario_generator.py
tests/: run_tests.py  test_combined_fixes.py  test_hmrc_curses.py  test_output.txt  test_rate_limiter.py
ui/: .env.example  Dockerfile  README.md  cloudbuild.yaml  next.config.js  next.config.mjs  package-lock.json  package.json  prebuild.sh  tailwind.config.js  tsconfig.json
utils/: advanced_legal_rag.py  copyright_legislation_downloader.py  curses_pipeline_runner.py  curses_pipeline_wrapper.py  dataset_creator.py  dataset_manager.py  hmrc_curses_wrapper.py  hmrc_curses_wrapper.py.bak  hmrc_curses_wrapper_fixed.py  hmrc_metadata.py  improved_downloader.py  legal_citation_graph.py  legal_compliance.py  legal_faiss_index.py  legal_metadata.py  legal_training.py  llama_training_optimizer.py  multi_database_ingestion.py  pipeline_controller.py  rate_limiter.py  version.py
(+86 files in other folders)
