[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasets"
version = "0.1.0"
description = "Dataset creation agent"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.13.4",
    "datasets==3.5.1",
    "fastapi==0.115.12",
    "langchain_anthropic==0.3.12",
    "langchain_aws==0.2.22",
    "langchain_core==0.3.56",
    "langchain_google_genai==2.1.4",
    "langchain_groq==0.3.2",
    "langchain_huggingface==0.1.2",
    "langchain_openai==0.3.15",
    "langgraph==0.4.1",
    "langsmith==0.3.39",
    "Markdown==3.8",
    "pydantic==2.11.4",
    "psycopg_pool==3.2.6",
    "Requests==2.32.3",
    "uvicorn==0.34.2",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]