[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "othertales.datasets"
version = "0.1.0"
description = "Dataset creation agent"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.13.4",
    "datasets==3.5.1",
    "fastapi==0.115.12",
    "langchain_anthropic==0.3.12",
    "langchain_aws==0.2.22",
    "langchain_community==0.3.23",
    "langchain_core==0.3.58",
    "langchain_google_genai==2.1.4",
    "langchain_groq==0.3.2",
    "langchain_huggingface==0.1.2",
    "langchain_openai==0.3.16",
    "langgraph-checkpoint-postgres==2.0.21",
    "langgraph-cli[inmem]==0.2.8",
    "langgraph==0.4.1",
    "langsmith==0.3.41",
    "Markdown==3.8",
    "playwright==1.52.0",
    "pydantic==2.11.4",
    "psycopg==3.2.6",
    "psycopg_pool==3.2.6",
    "Requests==2.32.3",
    "transformers==4.41.2",
    "torch==2.2.2",
    "uvicorn==0.34.2",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["othertales*"]
namespaces = true